------------------------------------------------------
Version 1.8.9 - 2.1.1.0
------------------------------------------------------
Initial Port to 1.8.9 as a rewrite

Additions (in relation to 1.7.10 - 1.2.15)
- None

Changes (in relation to 1.7.10 - 1.2.15)
- Default keybinding to open backpack is 'c' and to equip is now 'v'
- The backpack no longer renders on the client if the player is in first person perspective
- Start of a full fledged API
- Tons of various minor fixes/changes/optimizations
- (Internal) Changed how backpacks are stored internally, both for death and in general (uses two IEEPs), should be more stable.

Bug Fixes (in relation to 1.7.10 - 1.2.15)
- None