@@ -4,4 +4,5 @@ package gr8pefish.ironbackpacks.api.item.upgrades;
  * Implement this is the upgrade alters something in the alternate gui
  */
 public interface IAltGuiUpgrade extends IPackUpgrade {
+
 }
